Map visualization complete

--- a/Assignment4/Part1-EDA_D3js/Map visualization/index.html
+++ b/Assignment4/Part1-EDA_D3js/Map visualization/index.html
@@ -12,15 +12,33 @@
     <!-- The visualizations will be injected here -->
 
     <div id="map"></div>
+    <div id="geo"></div>
+    <hr>
+    <p>This map displays the locations of Michelin-starred restaurants across the world. Each circle represents a
+        restaurant, demonstrating the global reach and distribution of these prestigious establishments.</p>
     <div class="divider"></div>
 
     <div id="heatmap"></div>
+    <div id="heatmap"></div>
+    <hr>
+    <p>This heatmap illustrates the concentration of Michelin-starred restaurants in different regions. Darker shades
+        indicate a higher density of restaurants, highlighting culinary hubs around the world.</p>
     <div class="divider"></div>
 
     <div id="comparison"></div>
+    <hr>
+    <div id="comparison"></div>
+    <p>This map offers a comparative view of Michelin stars against the price range of restaurants. Larger circles
+        represent restaurants with higher prices, while the color intensity denotes the number of Michelin stars,
+        offering insights into the correlation between prestige and price.</p>
     <div class="divider"></div>
 
+
     <div id="cuisine"></div>
+    <hr>
+    <div id="cuisine"></div>
+    <p>This map showcases the most popular cuisines in cities with Michelin-starred restaurants. Each city is colored
+        based on its most prevalent cuisine, offering a gastronomic tour of favored culinary traditions worldwide.</p>
     <div class="divider"></div>
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
